rainbow button text contrast fix

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,35 @@ body {
     border: solid red;
 }
 
+
+
+.header {
+    
+    flex: 1 1 auto;
+    
+    border: solid orange;
+}
+
+.content {
+    display: flex;
+    
+    flex: 1 1 auto;
+    
+    border: solid yellow;
+}
+
+.options {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    
+    padding: 16px 32px;
+    
+    flex: 1 1 auto;
+    
+    border: solid blue;
+}
 button {
     padding: 16px 64px;
     margin: 0px 48px 0px 48px;
@@ -31,47 +60,18 @@ button:hover {
     background: black; /* any way to do this relative to original ??? */ /* Transition into this */ 
 }
 .rainbow:hover { /* transition into this, then have background scroll or whatever */
-
     background: linear-gradient(-66deg, cyan, yellow, magenta );
-}
-.erase:hover {  /* transition into this */
-    background: transparent;
     color: black;
-}
-
-
-.header {
-    
-    flex: 1 1 auto;
-
-    border: solid orange;
-}
-
-.content {
-    display: flex;
-
-    flex: 1 1 auto;
-
-    border: solid yellow;
-}
-
-.options {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 32px;
-
-    padding: 16px 32px;
-
-    flex: 1 1 auto;
-
-    border: solid blue;
 }
 .resize {
     margin-top: 64px;
 }
-.erase {
- 
+.resize:hover { /* transition to ease in grow and ease out */
+
+}
+.erase:hover {  /* transition into this */
+    background: transparent;
+    color: black;
 }
 
 
